Add POST_MAX_SIZE variable to customize maximum upload size

--- a/default.conf
+++ b/default.conf
@@ -3,6 +3,8 @@ server {
     server_name _;
     root /var/www/html;
 
+    client_max_body_size 64m;
+
     index index.php;
 
     include global/restrictions.conf;
