--- a/wordpress.conf
+++ b/wordpress.conf
@@ -26,5 +26,7 @@ location ~ [^/]\.php(/|$) {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PHP_VALUE "upload_max_filesize=64m
+post_max_size=64m";
     fastcgi_pass wordpress:9000;
 }
