--- a/wordpress.conf
+++ b/wordpress.conf
@@ -11,8 +11,42 @@ location / {
 rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 
 # Directives to send expires headers and turn off 404 error logging.
-location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
+location ~* ^.+\.(otf|woff|ttf|rss|atom|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
     access_log off; log_not_found off; expires max;
+}
+
+# Media: images, icons, video, audio send expires headers.
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm)$ {
+  expires 1M;
+  access_log off;
+  add_header Cache-Control "public";
+}
+
+# CSS and Javascript send expires headers.
+location ~* \.(?:css|js)$ {
+  expires 1y;
+  access_log off;
+  add_header Cache-Control "public";
+}
+
+# HTML send expires headers.
+location ~* \.(html)$ {
+  expires 7d;
+  access_log off;
+  add_header Cache-Control "public";
+}
+
+# Browser caching of static assets.
+location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf)$ {
+expires 7d;
+add_header Cache-Control "public, no-transform";
+}
+
+# Enable Gzip compression in NGNIX.
+gzip on;
+gzip_disable "msie6";
+
+gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
 }
 
 # Pass all .php files onto a php-fpm/php-fcgi server.
