--- a/restrictions.conf
+++ b/restrictions.conf
@@ -12,6 +12,16 @@ location = /robots.txt {
     try_files $uri /index.php?$args;
 }
 
+location = /apple-touch-icon.png {
+    access_log off;
+    log_not_found off;
+}
+
+location = /apple-touch-icon-precomposed.png {
+    access_log off;
+    log_not_found off;
+}
+
 # Deny all attempts to access hidden files such as .htaccess, .htpasswd, .DS_Store (Mac).
 # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
 location ~ /\. {
