Enable and configure microcaching for php_fastcgi.

--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,6 @@
+fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=microcache:100m inactive=10m max_size=128m;
+fastcgi_cache_key $server_name|$request_uri;
+
 server {
     listen 80 default_server;
     server_name _;
