--- a/wordpress.conf
+++ b/wordpress.conf
@@ -17,45 +17,114 @@ location ~* ^.+\.(eot|otf|woff|woff2|ttf|rss|atom|zip|tgz|gz|rar|bz2|doc|xls|exe
 
 # Media: images, icons, video, audio send expires headers.
 location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm)$ {
-  expires 1M;
-  access_log off;
-  add_header Cache-Control "public";
+    expires 1M;
+    access_log off;
+    add_header Cache-Control "public";
 }
 
 # CSS and Javascript send expires headers.
 location ~* \.(?:css|js)$ {
-  expires 1y;
-  access_log off;
-  add_header Cache-Control "public";
+    expires 1y;
+    access_log off;
+    add_header Cache-Control "public";
 }
 
 # HTML send expires headers.
 location ~* \.(html)$ {
-  expires 7d;
-  access_log off;
-  add_header Cache-Control "public";
+    expires 7d;
+    access_log off;
+    add_header Cache-Control "public";
 }
 
 # Browser caching of static assets.
 location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf)$ {
-expires 7d;
-add_header Cache-Control "public, no-transform";
+    expires 7d;
+    add_header Cache-Control "public, no-transform";
 }
 
 # Enable Gzip compression in NGNIX.
 gzip on;
 gzip_disable "msie6";
+gzip_static on;
+gzip_vary on;
+gzip_proxied any;
+gzip_comp_level 6;
+gzip_min_length 512;
+gzip_buffers 16 8k;
+gzip_http_version 1.1;
 
-gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/rss+xml text/javascript image/svg+xml font/truetype application/x-font-ttf text/x-component font/opentype application/vnd.ms-fontobject;
 
 # Pass all .php files onto a php-fpm/php-fcgi server.
 location ~ [^/]\.php(/|$) {
+
+    # Setup var defaults
+    set $no_cache "";
+
+    # If non GET/HEAD, don't cache & mark user as uncacheable for 1 second via cookie
+    if ($request_method !~ ^(GET|HEAD)$) {
+        set $no_cache "1";
+    }
+
+    # Don't cache logged in users or commenters
+    if ( $http_cookie ~* "comment_author_|wordpress_(?!test_cookie)|wp-postpass_|wp-settings-|wp-resetpass-|woocommerce_" ) {
+        set $no_cache "1";
+    }
+
+    # Don't cache admin URLs
+    if ($request_uri ~* "/(wp-admin/|wp-login.php)") {
+        set $no_cache "1";
+    }
+
+    # Don't cache WooCommerce dynamic content
+    if ($request_uri ~* "/store.*|/cart.*|/my-account.*|/checkout.*|/addons.*|/administrator.*|/resetpass.*|\?(add-to-cart|wc-api|wc-ajax=get_refreshed_fragments)=") {
+        set $no_cache "1";
+    }
+
+    # Drop no cache cookie if need be
+    # (for some reason, add_header fails if included in prior if-block)
+    if ($no_cache = "1") {
+        add_header Set-Cookie "_mcnc=1; Max-Age=2; Path=/";
+        add_header X-Microcachable "0";
+    }
+
+    # Bypass cache if no-cache cookie is set
+    if ($http_cookie ~* "_mcnc") {
+        set $no_cache "1";
+    }
+
+    # Bypass cache if flag is set
+    fastcgi_no_cache $no_cache;
+    fastcgi_cache_bypass $no_cache;
+
+    fastcgi_cache microcache;
+    fastcgi_cache_valid 404 30s;
+    fastcgi_cache_valid 200 10s;
+    fastcgi_max_temp_file_size 1M;
+
+    #Use stale cache items while updating in the background
+    fastcgi_cache_use_stale updating error timeout invalid_header http_500;
+    fastcgi_cache_lock on;
+    fastcgi_cache_lock_timeout 10s;
+
+    fastcgi_read_timeout 300;
+    fastcgi_buffers 8 256k;
+    fastcgi_buffer_size 128k;
+    fastcgi_intercept_errors on;
+            
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     if (!-f $document_root$fastcgi_script_name) {
         return 404;
     }
-    # This is a robust solution for path info security issue and works with "cgi.fix_pathinfo = 1" in /etc/php.ini (default)
 
+    if ($no_cache == "") {
+        add_header X-Cache $upstream_cache_status;
+    }
+
+    # Ignore headers set by WordPress
+    fastcgi_ignore_headers Cache-Control Expires;
+    
+    # This is a robust solution for path info security issue and works with "cgi.fix_pathinfo = 1" in /etc/php.ini (default)
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
