nginx doesn't use `==`

--- a/wordpress.conf
+++ b/wordpress.conf
@@ -118,7 +118,7 @@ location ~ [^/]\.php(/|$) {
     }
     # This is a robust solution for path info security issue and works with "cgi.fix_pathinfo = 1" in /etc/php.ini (default)
 
-    if ($no_cache == "") {
+    if ($no_cache = "") {
         add_header X-Nginx-Cache $upstream_cache_status;
     }
 
