Committing source for docker image tag 0.29

--- a/wordpress.conf
+++ b/wordpress.conf
@@ -85,7 +85,6 @@ location ~ [^/]\.php(/|$) {
     # (for some reason, add_header fails if included in prior if-block)
     if ($no_cache = "1") {
         add_header Set-Cookie "_mcnc=1; Max-Age=2; Path=/";
-        add_header X-Microcachable "0";
     }
 
     # Bypass cache if no-cache cookie is set
@@ -97,13 +96,14 @@ location ~ [^/]\.php(/|$) {
     fastcgi_no_cache $no_cache;
     fastcgi_cache_bypass $no_cache;
 
-    fastcgi_cache microcache;
-    fastcgi_cache_valid 404 30s;
-    fastcgi_cache_valid 200 10s;
-    fastcgi_max_temp_file_size 1M;
+    fastcgi_cache wordpress;
+    fastcgi_cache_valid 200 302 30s;
+    fastcgi_cache_valid 301     1m;
+    fastcgi_cache_valid any     1m;
+    fastcgi_max_temp_file_size  4m;
 
     #Use stale cache items while updating in the background
-    fastcgi_cache_use_stale updating error timeout invalid_header http_500;
+    fastcgi_cache_use_stale updating error timeout invalid_header http_500 http_503;
     fastcgi_cache_lock on;
     fastcgi_cache_lock_timeout 5s;
 
@@ -111,20 +111,18 @@ location ~ [^/]\.php(/|$) {
     fastcgi_buffers 8 256k;
     fastcgi_buffer_size 128k;
     fastcgi_intercept_errors on;
-            
+
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     if (!-f $document_root$fastcgi_script_name) {
         return 404;
     }
     # This is a robust solution for path info security issue and works with "cgi.fix_pathinfo = 1" in /etc/php.ini (default)
 
-    if ($no_cache = "") {
-        add_header X-Nginx-Cache $upstream_cache_status;
-    }
+    add_header X-Nginx-Cache $upstream_cache_status;
 
     # Ignore headers set by WordPress
     fastcgi_ignore_headers Cache-Control Expires;
-    
+
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
