--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,4 @@
-fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=microcache:100m inactive=10m max_size=128m;
+fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=wordpress:256m inactive=10m max_size=256m;
 fastcgi_cache_key $server_name|$request_uri;
 
 server {
