Minor configuration modifications for caching and client max body size.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,11 @@
 user  nginx;
 worker_processes  auto;
 
-# Maximum open file descriptors per process. Should be greater than worker_connections.
-worker_rlimit_nofile 8192;
-
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 events {
-  worker_connections 4096;
+  worker_connections 1024;
   use epoll;
   multi_accept on;
 }
@@ -27,8 +24,8 @@ http {
   server_tokens off;
 
   sendfile      on;
-  tcp_nopush    on;
-  tcp_nodelay   on;
+  # tcp_nopush    on;
+  # tcp_nodelay   on;
 	keepalive_timeout		75 20;
 	client_max_body_size		200m;
 	client_body_timeout		3m;
