--- a/wordpress.conf
+++ b/wordpress.conf
@@ -16,8 +16,8 @@ location ~* ^.+\.(eot|otf|woff|woff2|ttf|rss|atom|zip|tgz|gz|rar|bz2|doc|xls|exe
 }
 
 # Media: images, icons, video, audio send expires headers.
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm)$ {
-    expires 1M;
+location ~* \.(?:cur|gz|svg|svgz|mp4|ogg|ogv|webm)$ {
+    expires 30d;
     access_log off;
     add_header Cache-Control "public";
 }
@@ -38,7 +38,8 @@ location ~* \.(html)$ {
 
 # Browser caching of static assets.
 location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf)$ {
-    expires 7d;
+    expires 30d;
+    access_log off;
     add_header Cache-Control "public, no-transform";
 }
 
