--- a/restrictions.conf
+++ b/restrictions.conf
@@ -24,3 +24,23 @@ location ~ /\. {
 location ~* /(?:uploads|files)/.*\.php$ {
     deny all;
 }
+
+
+#
+# These rules was taken from: https://jesus.perezpaz.es/874/wordpress-nginx-configuration/ and
+# pretend to avoid to hacking tools to get information about Wordpress installation
+#
+#    Common deny or internal locations, to help prevent access to areas of
+#    the site that should not be public
+location ~* wp-admin/includes { deny all; }
+location ~* wp-includes/theme-compat/ { deny all; }
+location ~* wp-includes/js/tinymce/langs/.*\.php { deny all; }
+location /wp-content/ { internal; }
+location /wp-includes/ { internal; }
+
+#    Protects the wp-config.php|readme.html|license.txt files from being
+#    accessed (uncomment after wordpress installation)
+location ~ /(\.|wp-config.php|readme.html|license.txt) { deny all; }
+
+#    Prevent access to any files starting with a $ (usually temp files)
+location ~ ~$ { access_log off; log_not_found off; deny all; }
