--- a/wordpress.conf
+++ b/wordpress.conf
@@ -10,12 +10,12 @@ location / {
 # Add trailing slash to */wp-admin requests.
 rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 
-# Directives to send expires headers and turn off 404 error logging.
-location ~* ^.+\.(eot|otf|woff|woff2|ttf|rss|atom|zip|tgz|gz|rar|bz2|doc|docx|xls|xlsx|exe|ppt|pptx|tar|mid|midi|wav|bmp|rtf)$ {
+# Directives to send expires headers and turn off 404 error logging. I added epub/doc/excel
+location ~* ^.+\.(eot|otf|woff|woff2|ttf|rss|atom|zip|tgz|gz|rar|bz2|doc|docx|xls|xlsx|exe|ppt|pptx|tar|mid|midi|wav|bmp|rtf|epub)$ {
     access_log off; log_not_found off; expires max;
 }
 
-# Media: images, icons, video, audio send expires headers.
+# Media: images, icons, video, audio send expires headers. I added mp3/mp4/m4a
 location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|m4a|mp3|ogg|ogv|webm)$ {
   expires 1M;
   access_log off;
