--- a/restrictions.conf
+++ b/restrictions.conf
@@ -35,7 +35,8 @@ location ~* /(?:uploads|files)/.*\.php$ {
 location ~* wp-admin/includes { deny all; }
 location ~* wp-includes/theme-compat/ { deny all; }
 location ~* wp-includes/js/tinymce/langs/.*\.php { deny all; }
-location /wp-content/ { internal; }
+# Comment out to test JSON download from wp-content
+# location /wp-content/ { internal; }
 location /wp-includes/ { internal; }
 
 #    Protects the wp-config.php|readme.html|license.txt files from being
