--- a/restrictions.conf
+++ b/restrictions.conf
@@ -35,8 +35,9 @@ location ~* /(?:uploads|files)/.*\.php$ {
 location ~* wp-admin/includes { deny all; }
 location ~* wp-includes/theme-compat/ { deny all; }
 location ~* wp-includes/js/tinymce/langs/.*\.php { deny all; }
-# CCJ: allowing JSON file from wp-content
-location ~* wp-content/.*\.json { allow all; }
+# CCJ: allowing JSON/ CCS.MAP file from wp-content
+location ~* wp-content/plugins/.*\.json { allow all; }
+location ~* wp-content/plugins/.*\.css.map { allow all; }
 location /wp-content/ { internal; }
 location /wp-includes/ { internal; }
 
