--- a/wordpress.conf
+++ b/wordpress.conf
@@ -10,6 +10,11 @@ location / {
 # Add trailing slash to */wp-admin requests.
 rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 
+# For Yoast SEO SiteMap
+# https://yoast.com/help/xml-sitemaps-nginx/
+rewrite ^/sitemap_index.xml$ /index.php?sitemap=1 last;
+rewrite ^/([^/]+?)-sitemap([0-9]+)?.xml$ /index.php?sitemap=$1&sitemap_n=$2 last;
+
 # Directives to send expires headers and turn off 404 error logging. I added epub/doc/excel
 location ~* ^.+\.(eot|otf|woff|woff2|ttf|rss|atom|zip|tgz|gz|rar|bz2|doc|docx|xls|xlsx|exe|ppt|pptx|tar|mid|midi|wav|bmp|rtf|epub)$ {
     access_log off; log_not_found off; expires max;
